added some contents

--- a/todoapp-angular/src/index.html
+++ b/todoapp-angular/src/index.html
@@ -10,5 +10,8 @@
 </head>
 <body>
   <app-root></app-root>
+  <div style=" text-align: center ">
+  <h2> <b> Adding some contents for PR, do not merge.</b></h2> 
+  </div>
 </body>
 </html>
